SUBDIRS = libhpx

nobase_include_HEADERS = hpx/action.h \
                         hpx/addr.h \
                         hpx/attributes.h \
                         hpx/builtins.h \
                         hpx/gas.h \
                         hpx/hpx.h \
                         hpx/lco.h \
                         hpx/par.h \
                         hpx/parcel.h \
                         hpx/process.h \
                         hpx/rpc.h \
                         hpx/runtime.h \
                         hpx/thread.h \
                         hpx/time.h \
                         hpx/topology.h \
                         hpx/types.h \
                         libapex/apex_global_hpx.h \
                         libhpx/libhpx.h \
                         libhpx/config.h \
                         libhpx/options.def

if HAVE_HPXPP
nobase_include_HEADERS += hpx/hpx++.h \
                          hpx/cxx/action.h \
                          hpx/cxx/ccall.h \
                          hpx/cxx/errors.h \
                          hpx/cxx/gas.h \
                          hpx/cxx/global_ptr.h \
                          hpx/cxx/lco.h \
                          hpx/cxx/malloc.h \
                          hpx/cxx/par_for.h \
                          hpx/cxx/process.h \
                          hpx/cxx/runtime.h \
                          hpx/cxx/string.h \
                          hpx/cxx/system.h \
                          hpx/cxx/thread.h \
                          hpx/cxx/types.def
endif
