nobase_include_HEADERS = pxgl/pxgl.h \
			 pxgl/adjacency_list.h \
                         pxgl/dimacs.h \
                         pxgl/edge_list.h \
                         pxgl/sssp.h \
			 pxgl/defs.h \
	                 pxgl/gteps.h \
			 pxgl/statistics.h \
                         pxgl/termination.h \
                         libpxgl/pqueue.h \
                         libpxgl/pqueue_wrapper.h \
                         libpxgl/sssp_queue.h \
                         libpxgl/sssp_common.h \
                         libpxgl/sssp_dc.h \
                         libpxgl/sssp_delta.h \
                         libpxgl/sssp_chaotic.h \
                         libpxgl/termination.h \
                         libpxgl/atomics.h
