SUBDIRS = boot util gas

noinst_HEADERS = action.h \
                 attach.h \
                 CollectiveOps.h \
                 debug.h \
                 events.h \
                 GAS.h \
                 gpa.h \
                 instrumentation.h \
                 LCOOps.h \
                 locality.h \
                 memory.h \
                 MemoryOps.h \
                 Network.h \
                 padding.h \
                 parcel.h \
                 ParcelOps.h \
                 ParcelStringOps.h \
                 percolation.h \
                 process.h \
                 rebalancer.h \
                 Scheduler.h\
                 StringOps.h \
                 system.h \
                 time.h \
                 Topology.h \
                 Worker.h


